# novel-agent

./: .gitignore  README.md  TODO-防污染智能体编排.md  TODO.md  __init__.py  comprehensive_optimization_checklist.md  config.yaml  optimization_checklist.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  web_file_catalog.py  web_ui.py  webnovel_handoff_gate_template_v1.md  webnovel_orchestration_template_v1.md  webnovel_outline_template_v1.md  webnovel_setting_bible_template_v1.md  webnovel_volume_story_list_template_v1.md  《红星锚定》九步章节生产线完整母版 v2.2.md  全自动饲养员.bat  启动器.bat  启动网页前端.bat  启动网页前端.command  多agents防污染协作方法.md  改造方法.txt  灵感探针.bat  编排.md
.claude/: settings.local.json
chapter_pipeline/: __init__.py  orchestrator.py  outline_middle_layer.py  prompt_registry.py
core_engine/: agent_models.py  batch_processor.py  cache_manager.py  config_loader.py  inspire.py  llm_client.py  logger.py  main_pipeline.py  packager.py  parser.py  renderer.py  run_audit.py  runtime_env.py  schemas.py  update_kb.py  utils.py  validator.py
docs/: README.md  原型讨论.md  图案.txt  备忘录_长期记忆LTM计划.md  示例_带RAG指令的草稿范文.md  红果短剧工作流.md  项目本体论.md  项目构建_3.0.md
drafts/: 123.txt
knowledge_base/: KB_短剧打脸节奏_20260402_0045.md  KB_重生逆袭_20260402_0147.md  KB_黑社会_20260403_2352.md
pre_hub/: __init__.py  ltm.py  novel_preflight_orchestrator.py  pre_hub.py
rag_engine/: __init__.py  bailian_retriever.py  brave_search.py  content_cleaner.py  mcp_client.py  retriever.py  search_aggregator.py  tavily_search.py
reports/: BatchReport_V3_20260331_130510.md  BatchReport_V3_20260331_130542.md  BatchReport_V3_20260331_131253.md  BatchReport_V3_20260331_131407.md  BatchReport_V3_20260331_132118.md  BatchReport_V3_20260331_132550.md  BatchReport_V3_20260331_133324.md  BatchReport_V3_20260331_143011.md  BatchReport_V3_20260331_143459.md  BatchReport_V3_20260331_145113.md  BatchReport_V3_20260331_145430.md  BatchReport_V3_20260331_161400.md  BatchReport_V3_20260331_164850.md  BatchReport_V3_20260331_213638.md  BatchReport_V3_20260401_001642.json  BatchReport_V3_20260401_001642.md  BatchReport_V3_20260401_130411.json  BatchReport_V3_20260401_130411.md  BatchReport_V3_20260401_130737.json  BatchReport_V3_20260401_130737.md  BatchReport_V3_20260401_202652.json  BatchReport_V3_20260401_202652.md  BatchReport_V3_20260402_020731.json  BatchReport_V3_20260402_020731.md  BatchReport_V3_20260404_000115.json  BatchReport_V3_20260404_000115.md
scripts/: cli.py  outline_generator.py  preflight.py  test_bailian_sdk.py  test_novel_preflight.py  verify_bailian_rag.py
scripts_output/: 123_成品剧本.txt
templates/: draft_template.md  pitch_template.md  webnovel_chapter_construction_card_template_v1.md  webnovel_handoff_gate_template_v1.md  webnovel_orchestration_template_v1.md  webnovel_volume_story_list_template_v1.md  灵感提示卡_重生逆袭_20260402_002417.md
tests/: test_agent_models.py  test_auto_indexing.py  test_batch_processor.py  test_cache_manager.py  test_chapter_orchestrator.py  test_cli.py  test_hybrid_retriever.py  test_llm_client.py  test_mcp_client.py  test_outline_middle_layer.py  test_packager.py  test_parser_regressions.py  test_prehub_v4.py  test_renderer.py  test_run_audit.py  test_session_cache.py  (+4 more)
(+73 files in other folders)
