[project]
name = "novel-agent"
version = "0.1.0"
description = "番茄小说一键制造机 - 网文立项、大纲中台、章节生产与导出流水线"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=2.30,<3",
    "pydantic>=2.0.0,<3",
    "PyYAML>=6.0,<7",
    "alibabacloud-bailian20231229",
    "httpx>=0.25.0",
    "requests>=2.33,<3",
    "tavily-python>=0.7.24,<0.8",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.16",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.4.0",
    "pytest-mock",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 显式指定需要打包的目录，避免把 logs、novel_outputs 等数据文件夹也当成 Python 包
packages = [
    "core_engine",
    "chapter_pipeline",
    "rag_engine",
    "scripts",
    "pre_hub",
    "pre_hub.artifacts",
    "pre_hub.layer0_source_guard",
    "pre_hub.layer1_market_radar",
    "pre_hub.layer2_audience_modeling",
    "pre_hub.layer3_router",
    "pre_hub.layer4_concept_arena",
    "pre_hub.layer5_narrative_graph",
    "pre_hub.layer6_adversarial",
    "pre_hub.layer7_admission",
    "pre_hub.schemas",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
exclude = "(^\\.venv/|^tests/)"
